--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "animate.css": "^4.1.0",
+    "animate.css": "^4.1.1",
     "antd": "^4.4.2",
+    "aos": "^3.0.0-beta.6",
     "connected-react-router": "^6.8.0",
     "history": "^5.0.0",
+    "intersection-observer": "^0.12.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-alice-carousel": "^1.19.3",
     "react-dom": "^16.13.1",
+    "react-intersection-observer": "^8.31.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
