--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-alice-carousel": "^1.19.3",
     "react-dom": "^16.13.1",
     "react-intersection-observer": "^8.31.0",
+    "react-player": "^2.8.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
